--- a/css/global.css
+++ b/css/global.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   padding: 0;
   line-height: 1.6;
-  background-image: url('../resources/WaterBackground.jpg');
+  background-image: url('../resources/WaterBackground.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
